# public_prize_contest_radar

./: .gitignore  README.md  agents.md  progress.md  pyproject.toml
.local/: README.md
config/: categories.yaml  runtime.yaml  schedule.yaml  sources.yaml
data/: past_results.sample.csv  seed_institutions.csv
docs/: ops-plan.md  project-brief.md
docs/plans/: 2026-04-23-public-prize-contest-radar.md
logs/: README.md
memory/serena/: browseros-ops+cron__2026-04-23-1054__passed.md  browseros-tab-cleanup__2026-04-26-1839__passed.md  daily-update+cron__2026-04-23-1127__passed.md  handoff+browseros+ops__2026-04-23-1018__wip.md  handoff+browseros+ops__2026-04-23-1549__done.md  schedule-10kst__2026-04-23-1415__passed.md  telegram-master-id+docs__2026-04-23-1631__passed.md  url-cache+dedupe__2026-04-23-1307__passed.md
scripts/: daily_contest_update.sh  run_radar.sh
src/contest_radar/: __init__.py  browseros_cdp.py  browseros_collectors.py  cli.py  collectors.py  config_loader.py  models.py  normalize.py  pipeline.py  reporting.py  schedule.py  scoring.py  storage.py  telegram.py
tests/: test_browseros_cdp.py  test_browseros_parsing.py  test_cli_notifications.py  test_collectors.py  test_normalize.py  test_pipeline.py  test_schedule.py  test_scoring.py  test_storage.py  test_telegram.py
